hard-gists/228998/run.log
=== Docker Run Log for 228998 ===
Started at: Mi 29. Okt 13:02:03 CET 2025

[2025-10-29 13:02:03] START: Running container for 228998
[2025-10-29 13:02:03] SUCCESS: Container 87743414dc090c9417d5f69ca87edd9124757c19026141e28dc2f2d277dc10f3 started for 228998
=== Container logs for 228998 ===
  File "/snippet.py", line 34
    def datagramReceived(self, data, (host, port)):
                                     ^^^^^^^^^^^^
SyntaxError: Function parameters cannot be parenthesized
=== End of logs for 228998 ===
[2025-10-29 13:02:05] INFO: Container 87743414dc090c9417d5f69ca87edd9124757c19026141e28dc2f2d277dc10f3 has stopped
